<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.spf.MainActivity">
    <item
        android:id="@+id/action_devices"
        android:orderInCategory="100"
        android:title="@string/action_devices"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="100"
        android:title="@string/action_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_schedule"
        android:orderInCategory="100"
        android:title="@string/action_schedule"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_myprofile"
        android:orderInCategory="100"
        android:title="@string/action_myprofile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_myvet"
        android:orderInCategory="100"
        android:title="@string/action_myvet"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>