<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regist"
    android:scrollbars="none"
    android:background="@drawable/background_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/mainGreen"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/textTitle"
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRegistUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registUsername"
                android:hint="@string/user"
                android:background="#FFFFFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRegistEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@+id/editRegistUsername">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registEmail"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRegistPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@+id/editRegistEmail"
                android:hint="@string/phone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registPhone"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRegistAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@+id/editRegistPhone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registAdress"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRegistPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/editRegistAdress"
                tools:ignore="MissingConstraints"
                android:paddingTop="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registPassword"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editRegistPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="MissingConstraints"
                app:layout_constraintTop_toBottomOf="@+id/editRegistPassword">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registPasswordConfirm"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <ProgressBar
                android:id="@+id/registProgressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/registButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Sign Up"
                app:cornerRadius="15dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an acount ? "
                android:textColor="#000000"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/txtSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>